Updated check sidebar

--- a/frontend/sass/_base.sass
+++ b/frontend/sass/_base.sass
@@ -21,6 +21,8 @@ $timeline_row_date_border_color = $timeline_row_selected_border_color
 
 $timeline_font_color = #666
 
+$deposit_color = #090
+
 @import compass/reset
 @import compass/utilities
 @import compass/css3
