--- a/frontend/sass/events/_detail.sass
+++ b/frontend/sass/events/_detail.sass
@@ -1,10 +1,12 @@
 @import ui_mixins
 @import feedback
 @import events/billpay/detail
+@import events/branch/detail
 @import events/check/detail
 
 #event-detail-view
   +billpay-detail-view
+  +branch-detail-view
   +check-detail-view
   position: fixed
   color: #444
@@ -39,6 +41,9 @@
     h3
       font-size: 16px
       line-height: 1em
+  .deposit
+    .amount
+      color: $deposit_color
 
   .location
     padding: 5px 0 12px 0
@@ -72,9 +77,11 @@
   .available-service
     margin: 10px 0 0
     border: 1px solid #92c5e0
-    background: #fff url(/images/vcu/avatar.png) no-repeat 7px 12px
-    padding: 7px 5px 7px 55px
     font-size: 11px
+    padding: 10px 10px
+    border: 1px solid #d4d4d4
+    border-width: 1px 0
+    background: url(/images/background.png) repeat-x left -250px
     h2
       font-size: 14px
       margin: 0
@@ -84,7 +91,7 @@
     ul
       +no-bullets
       +reset-box-model
+      +horizontal-list(5px)
+      margin: 10px 20px auto
       li
         margin: 0 0 0.5em
-        .yes
-          font-weight: bold
