--- a/frontend/sass/events/check/_detail.sass
+++ b/frontend/sass/events/check/_detail.sass
@@ -3,7 +3,7 @@
 = check-detail-view
   .check-image
     line-height: 1.2em
-    padding: 10px 0
+    padding: 5px 0 10px
     text-align: right
     .report-problems
       font-size: 11px
@@ -12,3 +12,8 @@
       .buttons
         p
           display: none
+    ul
+      +horizontal-list(3px)
+      li
+        img
+          width: 155px
