--- a/frontend/sass/_feedback.sass
+++ b/frontend/sass/_feedback.sass
@@ -2,9 +2,7 @@
 @import feedback/dashboard
 
 .feedback
-  border-top: 1px solid #d4d4d4
-  margin: 12px 0 0
-  padding: 14px 0 0
+  margin: 0.5em 0 0
   .avatar-and-question
     +float(left)
     +clearfix
