--- a/public/javascripts/compiled/views/timeline/events/check/detail.handlebars
+++ b/public/javascripts/compiled/views/timeline/events/check/detail.handlebars
@@ -1,9 +1,10 @@
 {{#check_image}}
 <div class="check-image">
-	<div class="image">
-    <img src="{{.}}" alt="{{../meta}}" />
-	</div>
-  <a href="#" class="report-problems">Problems with the check image?</a>
+  <ul>
+    <li><img src="{{.}}" alt="{{../meta}}" /></li>
+    <li><img src="{{../check_image_back}}" alt="{{../meta}}" /></li>
+  </ul>
+  <a href="#" class="report-problems">Problems with the check images?</a>
 </div>
 {{/check_image}}
 
@@ -11,7 +12,7 @@
   <h2>Avaliable service: MyVantage Bill Pay</h2>
   <p>It looks like you regularly write checks to Trugreen.  Would you like to sign up for MyVantage Bill Pay to automate these payments?</p>
   <ul>
-    <li><a href="#billpay/signup" class="yes">Yes, I'd like to sign up for MyVantage Bill Pay</a></li>
+    <li><a href="#billpay/signup" class="yes">Yes, I'd like to sign up</a></li>
     <li><a href="#billpay/no" class="no">No, thanks</a></li>
   </ul>
 </div>
