Added merchant reviews

--- a/frontend/sass/events/_detail.sass
+++ b/frontend/sass/events/_detail.sass
@@ -67,8 +67,16 @@
       h3
         font-size: 11px
       p
-        line-height: 1.2em
-        margin: 0 0 0.25em
+        margin: 0
+      .rating
+        margin-top: 10px
+        display: inline-block
+      +comment-form(58px)
+      div.comment
+        .buttons
+          p
+            font-size: 10px
+          
 
   .social
     position: absolute
