--- a/frontend/views/feedback/comment.handlebars
+++ b/frontend/views/feedback/comment.handlebars
@@ -6,5 +6,5 @@
 
 <div class="buttons">
   <button>{{ buttonText }}</button>
-  <p><strong>Your review will be shared, not your name.</strong>  <br />Enjoy your anonymity -- use it for good, not evil.</p>
+  <p><strong>Your review will be shared, not your name.</strong>  <br />Enjoy your anonymity. Use it for good, not evil.</p>
 </div>
